<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="hello">Hello World, HKMain!</string>
  <string name="app_name">HardwareKeySupportSample</string>
  <string name="button1">button1</string>
  <string name="button2">button2</string>
  <string name="button3">button3</string>
  <string name="textview">textview</string>
  <string name="gotopreference">go to preference</string>
</resources>
